instancelogo upload, instance message-interval, instance-critical check, column-selector dimensions, server lastMessage

--- a/src/main/resources/src/app/instance/instance.component.css
+++ b/src/main/resources/src/app/instance/instance.component.css
@@ -5,3 +5,12 @@ instance tr:hover {
 .col-icon {
   width: 50px;
 }
+
+.critical {
+  background: red !important;
+}
+
+.col-selector .ui-multiselect-panel {
+  height: 600px;
+  width: 400px;
+}
