--- a/src/main/resources/src/app/instance/instancetype.component.html
+++ b/src/main/resources/src/app/instance/instancetype.component.html
@@ -1,26 +1,49 @@
-<p-dataTable [value]="instanceType.instances" #dt class="instance-list" exportFilename="instances" (onRowClick)="handleRowClick($event)">
-  <p-header>
-    <button type="button" pButton icon="fa-file-o" iconPos="left" label="Export Data" (click)="dt.exportCSV()" style="float:right"></button>
-    <div style="text-align:left">
-      <p-multiSelect [options]="columnOptions" [(ngModel)]="cols" (onChange)="colsChanged"></p-multiSelect>
-    </div>
-  </p-header>
-  <p-column *ngFor="let col of cols | sortBy : 'pos'" [field]="col.field" [header]="col.header" [filter]="col.filter" [filterMatchMode]="col.filterMatchMode ? col.filterMatchMode : 'contains'" [sortable]="true" [styleClass]="col.class">
-    <ng-template *ngIf="col.field === 'modified'" let-item let-data="rowData" pTemplate type="body">
-      <span>{{data.lastMessage | date:"dd.MM.yyy &nbsp;&nbsp;HH:mm"}}</span>
-    </ng-template>
+<div class="ui-g">
+  <div class="ui-g-6">
+    <p-card *ngIf="instanceType">
+      <div class="ui-grid-row">
+        <div class="ui-grid-col-5" style="padding: .25em .5em;">
+          Image
+        </div>
+        <div class="ui-grid-col-7">
+          <img [src]="'data:image/png;base64,' + instanceType?.image" alt="No Image uploaded"><p-fileUpload mode="basic" name="file" [url]="'/api/instanceType/image/' + instanceType?.id" accept="image/*" maxFileSize="1000000" auto="true" chooseLabel="Change"></p-fileUpload>
+        </div>
+      </div>
+      <form-row [(ngModel)]="instanceType.messageInterval" [editable]="true" label="Message-Interval in minutes" (submitted)="save()"></form-row>
+    </p-card>
+  </div>
+</div>
+<div class="ui-g">
+  <div class="ui-g-12">
+    <p-dataTable [value]="instanceType.instances" #dt class="instance-list" exportFilename="instances" (onRowClick)="handleRowClick($event)" [rowStyleClass]="lookupRowStyleClass">
+      <p-header>
+        <button type="button" pButton icon="fa-file-o" iconPos="left" label="Export Data" (click)="dt.exportCSV()" style="float:right"></button>
+        <div style="text-align:left">
+          <p-multiSelect [options]="columnOptions" [(ngModel)]="cols" (onChange)="colsChanged" scrollHeight="545px" styleClass="col-selector"></p-multiSelect>
+        </div>
+      </p-header>
+      <p-column *ngFor="let col of cols | sortBy : 'pos'" [field]="col.field" [header]="col.header" [filter]="col.filter" [filterMatchMode]="col.filterMatchMode ? col.filterMatchMode : 'contains'" [sortable]="true" [styleClass]="col.class">
+        <ng-template *ngIf="col.field === 'modified'" let-item let-data="rowData" pTemplate type="body">
+          <span [title]="data.lastMessage | date:'dd.MM.yyy &nbsp;&nbsp;HH:mm'">{{data.timeAgo}}</span>
+        </ng-template>
 
-    <ng-template *ngIf="col.field === 'domains'" let-item let-data="rowData" pTemplate type="body">
-      <a *ngIf="data.domains && data.domains.length > 0" [href]="'http://' + data.domains[0].url" target="_blank">{{data.domains[0].name}}</a>
-      <span style="float:right; color: #aaa;" *ngIf="data.domains.length > 1">[+{{data.domains.length}}]</span>
-    </ng-template>
+        <ng-template *ngIf="col.field === 'domains'" let-item let-data="rowData" pTemplate type="body">
+          <a *ngIf="data.domains && data.domains.length > 0" [href]="'http://' + data.domains[0].url" target="_blank">{{data.domains[0].name}}</a>
+          <span style="float:right; color: #aaa;" *ngIf="data.domains.length > 1">[+{{data.domains.length}}]</span>
+        </ng-template>
 
-    <ng-template *ngIf="col.field === 'prod'" let-item let-data="rowData" pTemplate type="body">
-      <i class="fa fa-check" *ngIf="data.prod"></i>
-    </ng-template>
+        <ng-template *ngIf="col.field === 'prod'" let-item let-data="rowData" pTemplate type="body">
+          <i class="fa fa-check" *ngIf="data.prod"></i>
+        </ng-template>
 
-    <ng-template *ngIf="col.field === 'type'" let-item let-data="rowData" pTemplate type="body">
-      <span [instance-type]="data.type">{{data.type}}</span>
-    </ng-template>
-  </p-column>
-</p-dataTable>
+        <ng-template *ngIf="col.field === 'type'" let-item let-data="rowData" pTemplate type="body">
+          <img [src]="instance.instanceType?.image" [alt]="instance.instanceType?.name">
+        </ng-template>
+      </p-column>
+    </p-dataTable>
+
+  </div>
+</div>
+
+
+
