--- a/src/main/resources/src/app/instance/instancetype.component.html
+++ b/src/main/resources/src/app/instance/instancetype.component.html
@@ -1,5 +1,8 @@
 <div class="ui-g">
   <div class="ui-g-6">
+    <span style="font-weight: bold; font-size: 100px; line-height: 90px; font-variant: small-caps;">{{instanceType.name}}</span>
+  </div>
+  <div class="ui-g-6">
     <p-card *ngIf="instanceType">
       <div class="ui-grid-row">
         <div class="ui-grid-col-5" style="padding: .25em .5em;">
