--- a/src/main/resources/src/app/instance/instancetype.component.html
+++ b/src/main/resources/src/app/instance/instancetype.component.html
@@ -15,6 +15,20 @@
       <form-row [(ngModel)]="instanceType.messageInterval" [editable]="true" label="Message-Interval in minutes" (submitted)="save()"></form-row>
     </p-card>
   </div>
+  <div class="ui-g-6">
+    <p-card *ngIf="instanceType">
+      <h2>Deployment</h2>
+      <div class="ui-grid-row">
+        <div class="ui-grid-col-5" style="padding: .25em .5em;">
+          Update
+        </div>
+        <div class="ui-grid-col-7">
+          <p-fileUpload mode="basic" name="file" [url]="'/api/instanceType/update/' + instanceType?.id" accept="*/*" maxFileSize="100000000" auto="true" chooseLabel="Upload new Update"></p-fileUpload>
+        </div>
+      </div>
+      <a [href]="'/api/instanceType/deploy/' + instanceType.id" target="_blank">Deploy</a>
+    </p-card>
+  </div>
 </div>
 <div class="ui-g">
   <div class="ui-g-12">
