HealthChecks with Websockets

--- a/src/main/resources/src/app/instance/instance.component.css
+++ b/src/main/resources/src/app/instance/instance.component.css
@@ -6,6 +6,10 @@ instance tr:hover {
   width: 50px;
 }
 
+.pending {
+  background: lightgrey !important;
+}
+
 .critical {
   background: red !important;
 }
