--- a/src/main/resources/src/app/instance/instancetype.component.html
+++ b/src/main/resources/src/app/instance/instancetype.component.html
@@ -66,6 +66,10 @@
         <ng-template *ngIf="col.field === 'type'" let-item let-data="rowData" pTemplate type="body">
           <img [src]="instance.instanceType?.image" [alt]="instance.instanceType?.name">
         </ng-template>
+
+        <ng-template *ngIf="col.field === 'status'" let-item let-data="rowData" pTemplate type="body">
+          {{data.status}} <small title="Responsetime"> [{{data.responseTime}}ms]</small>
+        </ng-template>
       </p-column>
     </p-dataTable>
 
