--- a/src/main/resources/src/app/instance/instance.detail.component.html
+++ b/src/main/resources/src/app/instance/instance.detail.component.html
@@ -10,7 +10,7 @@
       <form-row [editable]="false" label="Identifier" [(ngModel)]="instance.identifier"></form-row>
       <form-row [editable]="false" label="Type" [(ngModel)]="instance.type">
         <ng-template>
-          <img [src]="instance.instanceType.image" [alt]="instance.instanceType.name">
+          <img [src]="'data:image/png;base64,' + instance.instanceType.image" [alt]="instance.instanceType.name">
         </ng-template>
       </form-row>
       <form-row [editable]="false" label="Version" [(ngModel)]="instance.version"></form-row>
