--- a/src/main/resources/src/app/instance/instance.list.component.html
+++ b/src/main/resources/src/app/instance/instance.list.component.html
@@ -6,6 +6,11 @@
       <p-multiSelect [options]="columnOptions" [(ngModel)]="cols" (onChange)="colsChanged" scrollHeight="545px" styleClass="col-selector"></p-multiSelect>
     </div>
   </p-header>
+  <p-column field="" header="#" [style]="{width:'35px','text-align':'left'}">
+    <ng-template let-i="rowIndex" pTemplate type="body">
+      {{i + 1}}
+    </ng-template>
+  </p-column>
   <p-column *ngFor="let col of cols | sortBy : 'pos'" [field]="col.field" [header]="col.header" [filter]="col.filter" [filterMatchMode]="col.filterMatchMode ? col.filterMatchMode : 'contains'" [sortable]="true" [styleClass]="col.class">
     <ng-template *ngIf="col.field === 'modified'" let-item let-data="rowData" pTemplate type="body">
       <span [title]="data.lastMessage | date:'dd.MM.yyy &nbsp;&nbsp;HH:mm'">{{data.timeAgo}}</span>
@@ -21,7 +26,7 @@
     </ng-template>
 
     <ng-template *ngIf="col.field === 'type'" let-item let-data="rowData" pTemplate type="body">
-      <img [src]="'data:image/png;base64,' + data.instanceType.image" [alt]="data.instanceType.name">
+      <img [src]="'data:image/png;base64,' + data.instanceType.image" [alt]="data.instanceType.name" style="max-width: 95px;">
     </ng-template>
 
     <ng-template *ngIf="col.field === 'status'" let-item let-data="rowData" pTemplate type="body">
